# resume-tailor

./: .gitignore  README.md  compose.yml
archive/: script.ipynb
backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  config.py  db.py  models.py  pyproject.toml  requirements.txt  schemas.py  script.ipynb  test.ipynb
backend/agent/: checkpointer.py  graph.py  nodes.py  prompts.py  state.py
backend/agent/ingestion/: graph.py  nodes.py  prompts.py  state.py
backend/agent/subagents/experience_rewrite/: graph.py  nodes.py  prompts.py  state.py
backend/agent/subagents/project_rewrite/: graph.py  nodes.py  prompts.py  state.py
backend/agent/tailor/: graph.py  nodes.py  prompts.py
backend/routes/: applications.py  auth.py  health.py  ingest.py  resume.py  tailor.py  user.py
backend/security/: jwt.py
backend/templates/: resume.tex
backend/utils/: fetch.py  makepdf.py  parse.py  s3.py  serialize.py
frontend/: .dockerignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: applications.js  auth.js  fetchInstance.js  resume.js
frontend/src/components/: CompleteBanner.jsx  ExperienceRewriteData.jsx  InterruptPanel.jsx  JDContent.jsx  NodeDataRenderer.jsx  ProjectRewriteData.jsx  ProjectSelectionContent.jsx  Sidebar.jsx  SkillMatchContent.jsx  SkillSelectionContent.jsx  StepRow.jsx  layout.jsx  resume-form.jsx
frontend/src/context/: ApplicationsContext.jsx  AuthContext.jsx  ResumeContext.jsx
frontend/src/hooks/: useApplications.js  useResume.js
frontend/src/lib/: authEvents.js
(+15 files in other folders)
