[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.78",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.135.2",
    "jinja2>=3.1.6",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "llama-cloud-services>=0.6.94",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
